--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
   /* text-align: center; */
   width: 100%;
   height: 100%;
+}
+h1, h2, h3, h4, h5, h6, p{
+  margin-bottom: 0;
+}
+section{
+  padding: 1rem;
+}
+button, p, span, label, th, td{
+  font-size: 14px;
+}
+.dropdown-item{
+  font-size: 14px;
 }
 /* .sidebar{
   display: flex;
@@ -15,8 +31,22 @@
   text-align: left;
   padding: 1rem;
 } */
-
+svg{
+  width: 20px!important;
+}
 .section{
   margin-left: 250px;
+  width: 80%;
   position: absolute;
+}
+
+
+.form_transaction input{
+  width:200px;
+}
+.form_transaction label{
+  font-size: 14px;
+}
+::placeholder{
+  font-size: 12px;
 }
