--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 *{
   margin: 0;
   padding: 0;
+  font-family: "Merriweather Sans", sans-serif;
 }
+
 .App {
   /* text-align: center; */
   width: 100%;
@@ -9,9 +11,6 @@
 }
 h1, h2, h3, h4, h5, h6, p{
   margin-bottom: 0;
-}
-section{
-  padding: 1rem;
 }
 button, p, span, label, th, td{
   font-size: 14px;
@@ -41,9 +40,16 @@ padding: 5px 40px 8px 10px;
 svg{
   width: 20px!important;
 }
+.login-container{
+  width:100%;
+  height: 100%;
+}
 .section{
   margin-left: 250px;
   width: 80%;
+  height:100%;
+  padding:1rem;
+  /* background-color: red; */
   position: absolute;
 }
 
@@ -60,7 +66,7 @@ svg{
 
 .dashboard-contaier{
   display: flex;
-  background-color: aqua;
+  /* background-color: aqua; */
   width:100%;
   height: 100%;
 }
@@ -75,4 +81,113 @@ svg{
 .expired-container{
   width: 30%;
   border: 1px solid black;
+}
+
+/* notifications */
+.notification-container{
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  /* background-color: aqua; */
+
+}
+.notification-form{
+  margin-top:10px;
+  width:50%;
+  height:50%;
+  border: 1px solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  position:relative;
+  /* padding:10px; */
+  margin:0 auto;
+}
+.notification-title{
+  border:0;
+  border-bottom: 1px solid gray;
+  margin: 10px;
+  outline: none;
+  height: 30px;
+  width:90%;
+  padding:10px;
+}
+.notification-description{
+  resize: none;
+  min-width: 90%;
+  min-height: 60px;
+  padding:10px;
+  outline: none;
+  margin-top: 10px;
+}
+
+/* Manual Entry */
+.manual-entry-container{
+  /* background-color: aqua; */
+  /*height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; */
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;   
+}
+.manual-entry-form{
+  width:40%;
+  height:50vh;
+  border:1px solid black;
+  border-radius: 10px;
+  padding:10px;
+  margin:0 auto;
+  position:relative;
+}
+.manual-entry-form input{
+  width: 90%;
+  font-size: 14px;
+  margin-top: 10px;
+  /* justify-self: center; */
+}
+.manual-entry-form label{
+  font-size: 16px;
+}
+
+/*User List*/
+.user-form-container{
+  /* background-color: aqua; */
+  height: 100%;
+  width:100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;   
+}
+.user-form{
+ /* width: 70%; */
+ /* height: 100%; */
+ border:1px solid black;
+ border-radius: 10px;
+ padding:10px;
+ margin:0 auto;
+ position:relative;
+ display: flex;
+/* background-color: aqua; */
+}
+
+.user-form input{
+  /* margin:5px 0px; */
+  border:0;
+  border-bottom: 1px solid black;
+  outline:none;
+}
+.user-form label,input{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.btn-light{
+  cursor: not-allowed;
 }
