--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,8 +1,8 @@
 .container{
-    width:100vw;
+    width:100%;
     height:100%;
     padding: 0;
-    
+    margin: 0;
 }
 .split-one{
     width: 60%;
@@ -18,10 +18,28 @@
   
   .split-two{
     width: 40%;
-    height: 100vh;  /* margin:40px 5px; */
-    text-align: center;
+    height: 100vh;  
+    /* margin:40px 5px; */
+    /* text-align: center; */
     /* background-color: ; */
     float:left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .login-form{
+    width:50%;
+    height: 40%;
+    margin:0 auto;
+    position: relative;
+    padding:10px;
+    border: 1px solid black;
+    border-radius: 10px;
+  }
+  .login-form input{
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
   }
   
   .left-heading{
