--- a/src/App.css
+++ b/src/App.css
@@ -63,23 +63,30 @@ svg{
 ::placeholder{
   font-size: 12px;
 }
-
+.dashboard-form{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+}
 .dashboard-contaier{
   display: flex;
   /* background-color: aqua; */
   width:100%;
   height: 100%;
 }
+.react-datepicker__input-container {
+  width: 200px; /* Set the desired width */
+}
 
 .scanned-container{
-  width: 30%;
-  height: 300px;
+  /* width: 30%; */
+  /* height: 300px; */
   border: 1px solid black;
   /* display: flex; */
   /* justify-content: space-between; */
 }
 .expired-container{
-  width: 30%;
   border: 1px solid black;
 }
 
