--- a/src/App.css
+++ b/src/App.css
@@ -68,13 +68,15 @@ svg{
   align-items: center;
   justify-content: space-around;
   width: 80%;
+  margin:  0 auto;
 }
-.dashboard-contaier{
-  display: flex;
-  /* background-color: aqua; */
+.dashboard-details{
   width:100%;
   height: 100%;
+  /* margin-top: 10; */
+
 }
+
 .react-datepicker__input-container {
   width: 200px; /* Set the desired width */
 }
@@ -82,12 +84,14 @@ svg{
 .scanned-container{
   /* width: 30%; */
   /* height: 300px; */
-  border: 1px solid black;
+  border: 1px solid #ddd;
   /* display: flex; */
   /* justify-content: space-between; */
 }
 .expired-container{
-  border: 1px solid black;
+  border: 1px solid #ddd;
+  /* width: 30%; */
+
 }
 
 /* notifications */
@@ -209,4 +213,52 @@ svg{
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+
+.custom-sidebar {
+  width: 250px;
+  background-color: #303f9f;
+  color: #ffffff;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.custom-sidebar .logo {
+  width: 100%;
+  max-width: 80px;
+  margin-bottom: 20px;
+}
+
+.custom-sidebar .menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.custom-sidebar .menu li {
+  margin-bottom: 10px;
+}
+
+.custom-sidebar .menu a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.custom-sidebar .menu a:hover {
+  background-color: #1a237e;
+}
+.scanned-container div tr th{
+  text-align: center;
+  width: 100%;
+  padding: 5px 10px !important;
 }
