--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ svg{
   width: 80%;
   height:100%;
   padding:1rem;
-  /* background-color: red; */
+  /* background-color: aqua; */
   position: absolute;
 }
 
@@ -206,57 +206,17 @@ svg{
   cursor: not-allowed;
 }
 .logo {
-  width:80%;
-  height:50%;
+  width:70%;
+  height: auto; 
   object-fit:contain;
   border-radius: 5px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  /* margin-top: auto; */
 }
 
 
-.custom-sidebar {
-  width: 250px;
-  background-color: #303f9f;
-  color: #ffffff;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.custom-sidebar .logo {
-  width: 100%;
-  max-width: 80px;
-  margin-bottom: 20px;
-}
-
-.custom-sidebar .menu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.custom-sidebar .menu li {
-  margin-bottom: 10px;
-}
-
-.custom-sidebar .menu a {
-  color: #ffffff;
-  text-decoration: none;
-  display: block;
-  padding: 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.custom-sidebar .menu a:hover {
-  background-color: #1a237e;
-}
 .scanned-container div tr th{
   text-align: center;
   width: 100%;
