--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
-  font-family: "Merriweather Sans", sans-serif;
-}
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;}
 
 .App {
   /* text-align: center; */
@@ -12,8 +14,17 @@
 h1, h2, h3, h4, h5, h6, p{
   margin-bottom: 0;
 }
-button, p, span, label, th, td{
-  font-size: 14px;
+button, p, a, span, label, th, td,input, select{
+  font-size: 13px!important;
+}
+a {
+  cursor: pointer;
+}
+.ps-menu-button link{
+  font-size: 12px;
+}
+::placeholder{
+  font-size: 12px!important;
 }
 .cust_dropdown{
 /* height:min-content */
@@ -40,20 +51,27 @@ padding: 5px 40px 8px 10px;
 svg{
   width: 20px!important;
 }
-.login-container{
-  width:100%;
+/* .login-container{
+
   height: 100%;
-}
+} */
 .section{
   margin-left: 250px;
   width: 80%;
   height:100%;
-  padding:1rem;
+  padding:1.5rem;
   /* background-color: aqua; */
   position: absolute;
 }
 
+.link.selected {
+  background-color: #e0e0e0; 
+}
 
+.form_transaction{
+  /* border: 1px solid black; */
+  margin: 20px 0px;
+}
 .form_transaction input{
   width:180px;
 }
@@ -66,8 +84,8 @@ svg{
 .dashboard-form{
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  width: 80%;
+  /* justify-content: space-around; */
+  /* width: 80%; */
   margin:  0 auto;
 }
 .dashboard-details{
@@ -109,7 +127,7 @@ svg{
 .notification-form{
   margin-top:10px;
   width:100%;
-  height:50%;
+  height:65%;
   border: 1px solid black;
   border-radius: 10px;
   display: flex;
@@ -136,6 +154,17 @@ svg{
   padding:10px;
   outline: none;
   margin-top: 10px;
+}
+.created_box{
+  width:250px;
+  border: 1px solid #ddd;
+  text-align: center;  
+  margin:0px 10px;
+}
+.created_box p{
+padding: 8px 0;
+font-weight: 500;
+border-bottom: 1px solid #ddd;
 }
 
 /* Manual Entry */
@@ -200,6 +229,11 @@ svg{
   display: flex;
   flex-direction: column;
   margin: 0;
+}
+.user_list_drop_down{
+width:150px;
+height: 34px;
+font-size: 13px !important;
 }
 
 .btn-light{
