--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,13 +1,15 @@
 .container{
-    width:100%;
-    height:100%;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  overflow: hidden;
 }
 .split-one{
     width: 60%;
     height: 100vh;
-    background-color:rgb(58, 73, 189);
+background: #223f99;
     float:left;
     text-align: center;
     color:white;
@@ -26,21 +28,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #ddd;
   }
-  .login-form{
-    width:50%;
-    height: 40%;
-    margin:0 auto;
-    position: relative;
-    padding:10px;
-    border: 1px solid black;
-    border-radius: 10px;
+  .login_form{
+/* box-shadow: 0 0 10px #fff; */
+border-radius: 10px;
+background: #fff;
   }
-  .login-form input{
-    border: none;
-    outline: none;
-    border-bottom: 1px solid black;
-  }
+
   
   .left-heading{
     font-size: 80px;
